@@ -61,7 +61,7 @@
  *
  * #version 1.2.3
  * @date    November 12, 2013
- * Re-Adjust `z-index: 2;` for main navigation menu
+ * Re-Adjust `z-index: 3` for main navigation menu
  * Reduced the citation font-size for better aesthetics
  */
 
@@ -355,6 +355,7 @@ input[type="checkbox"] {
 select,
 input[type="file"] {
     height: 28px;
+
     /* In IE7, the height of the select element cannot be changed by height, only font-size */
 
     *margin-top: 4px;
@@ -664,7 +665,7 @@ div#top-navigation-menu {
     padding: 0;
     position: absolute;
     /* Raise above all other elements */
-    z-index: 1;
+    z-index: 3;
 }
 
 .nav-menu a, .nav-menu a:hover {
@@ -713,8 +714,7 @@ ul.nav-menu ul {
 ul.nav-menu {
     float: left;
     position: relative;
-    z-index: 2;
-    /* z-index: 1; */
+    z-index: 3;
 }
 
 ul.nav-menu li {
